Deprecate Type.getTypeParameters()
For general use, it's preferable to call the type-specific
methods (e.g., ArrayType.getElementType(), MapType.getKeyType, MapType.getValueType())